# fake-news-headline-detector-api

./: CMakeLists.txt  Dockerfile  README.md  api.py
.github/workflows/: keep-warm.yml
fake-news-headline-detector/: .gitignore  CMakeLists.txt  Dockerfile  page.txt
fake-news-headline-detector/data/raw/: headlines.csv
fake-news-headline-detector/fake-news-frontend/: package-lock.json  package.json
fake-news-headline-detector/fake-news-frontend/app/: page.tsx
fake-news-headline-detector/fake-news-frontend/public/: fake_news.data  fake_news.js  fake_news.wasm
fake-news-headline-detector/include/: logistic_regression.hpp  vectorizer.hpp
fake-news-headline-detector/model/: vocab.txt
fake-news-headline-detector/src/: classifier.cpp  text_preprocessing.cpp  train.cpp
include/: classifier.hpp  dataset.hpp  logistic_regression.hpp  text_preprocessing.hpp  vectorizer.hpp  vocabulary.hpp
src/: classifier.cpp  dataset.cpp  logistic_regression.cpp  main.cpp  text_preprocessing.cpp  train.cpp  vectorizer.cpp  vocabulary.cpp
